--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <title>Sylvain MATHIEU | Blog</title>
+  </head>
+  <body>
+    <p>Hello World</p>
+  </body>
+</html>
