Head and Vanilla CSS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>Sylvain MATHIEU | Blog</title>
+	<meta name="author" content="Sylvain MATHIEU">
+	<meta name="description" content="Blog de partage sur : l'extreme programming, le test-driven development, le software craft, le code legacy et le continuous delivery">
+    <title>Blog | Sylvain MATHIEU</title>
+	<link rel="stylesheet" href="https://vanillacss.com/vanilla.css">
   </head>
   <body>
     <p>Hello World</p>
