First five articles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,209 @@
 <!DOCTYPE html>
 <html lang="fr">
+
   <head>
     <meta charset="utf-8">
 	<meta name="author" content="Sylvain MATHIEU">
-	<meta name="description" content="Blog de partage sur : l'extreme programming, le test-driven development, le software craft, le code legacy et le continuous delivery">
+	<meta name="description" content="Blog de partage des vidéos, podcasts, livres et articles qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel (XP, TDD, software craft, legacy code legacy, continuous delivery).">
     <title>Blog | Sylvain MATHIEU</title>
 	<link rel="stylesheet" href="https://vanillacss.com/vanilla.css">
   </head>
+  
   <body>
-    <p>Hello World</p>
+  
+	<header>
+		<h1>Blog | Sylvain MATHIEU</h1>
+	</header>
+	
+	<main>
+	
+		<article>
+			<h2>Introduction</h2>
+			<p>J'ai inité ce blog pour partager du contenu avec mon équipe. Vous trouverez ici des vidéos 📺 / des podcasts 📻 / des livres 📕 / des articles 📰 qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel.</p>
+			<p>
+				<ul>
+					<li><a href="#">#10 - 📺 Continuous Delivery</a></li>
+					<li><a href="#">#9 - 📰 Culture organisationnelle</a></li>
+					<li><a href="#">#8 - 📰 State of DevOps</a></li>
+					<li><a href="#">#7 - 🌟 Extreme Programming</a></li>
+					<li><a href="#">#6 - 📕 Software Craft</a></li>
+					<li><a href="#arnaud_lemaire">#5 - 📺 Arnaud Lemaire</a></li>
+					<li><a href="#dont_kill_french_tech">#4 - 📰 Don't Kill French Tech</a></li>
+					<li><a href="#culture_code">#3 - 📕 Culture Code</a></li>
+					<li><a href="#les_cast_codeurs_et_welovedevs">#2 - 📻 Les Cast Codeurs et WeLoveDevs</a></li>
+					<li><a href="#cours_java">#1 - 📺 Cours Java</a></li>
+				</ul>
+			</p>
+		</article>
+		
+		<hr>
+		
+		<article>
+			<h2 id="arnaud_lemaire">#5 - 📺 Arnaud Lemaire</h2>
+			<p>
+				<ul>
+					<li>Présentation : Arnaud Lemaire est un développeur et conférencier français, il parle de code, de legacy, d'agilité par l'extreme programming (XP) et de notre métier en général en synthétisant les idées développées par des grands noms du logiciel</li>
+					<li>Mots-clés : code / qualité / agilité</li>
+					<li>Blog : <a href="https://www.lilobase.me/" target="_blank">lilobase.me</a>
+					<li>Conférences :
+						<ol>
+							<li><a href="https://youtu.be/itGmiTS_IPw" target="_blank">Entre industrialisation et artisanat, le métier de développeur</a>
+								<ul>
+									<li>Public : programmeur et manager</li>
+									<li>Commentaires:
+										<ul>
+											<li>se concentrer sur les fondamentaux plutôt que sur les outils</li>
+											<li><strong>"garder les options ouvertes"</strong></li>
+											<li>mentionne le Toyota Production System 🚗 abordé dans XP</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li><a href="https://youtu.be/_mqn0FfZ2SY" target="_blank">Les microservices, c'est pas automatique</a>
+								<ul>
+									<li>Public : programmeur</li>
+									<li>Commentaires: courte présentation (23 minutes), pleine de bon sens</li>
+								</ul>
+							</li>
+							<li><a href="https://youtu.be/sZbmP0JZHBs" target="_blank">Et si on redémarrait l'agilité ?</a>
+								<ul>
+									<li>Tout public 👐</li>
+									<li>Commentaires:
+										<ul>
+											<li>conférence autour des projets et de leurs acteurs</li>
+											<li>fait référence au Chaos Report qui présente l'état de l'art du développement logiciel (publié annuellement depuis 1994)</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+						</ol>
+					</li>
+				</ul>
+			</p>
+		</article>
+		
+		<hr>
+		
+		<article>
+			<h2 id="dont_kill_french_tech">#4 - 📰 Don't Kill French Tech</h2>
+			<p>
+				<ul>
+					<li>Titre : <a href="https://www.dontkillfrenchtech.fr/" target="_blank">Dont' Kill French Tech</a> par un collectif de développeurs•ses</li>
+					<li>Année : 2021</li>
+					<li>Mots-clés : cloud / politique / souveraineté numérique</li>
+					<li>Tout public 👐</li>
+					<li>Commentaires :
+						<ul>
+							<li>article publié dans Le Monde</li>
+							<li>fait le lien avec l'épisode 262 des Cast Codeurs ⬇⬇</li>
+							<li>plus récente, cette <a href="https://www.latribune.fr/opinions/tribunes/pour-un-ministere-du-numerique-de-plein-exercice-916582.html" target="_blank">tribune</a> pour la création d'un ministère du numérique</li>
+						</ul>
+					</li>
+				</ul>
+			</p>
+		</article>
+		
+		<hr>
+		
+		<article>
+			<h2 id="culture_code">#3 - 📕 Culture Code</h2>
+			<p>
+				<ul>
+					<li>Titre : <a href="https://www.octo.com/publications/culture-code/" target="_blank">Culture Code</a> par Octo</li>
+					<li>Année : 2019</li>
+					<li>Most-clés : qualité / vie d'une équipe / tests</li>
+					<li>Public : programmeur et tout public 👐 (1ère partie à minima et + si affinités)</li>
+					<li>Commentaires :
+						<ul>
+							<li>petit livre tech. écrit en français (178 pages)</li>
+							<li>Octo est une société de conseil reconnue, organisatrice de la Duck Conf</li>
+							<li>de nombreuses autres <a href="https://www.octo.com/publications/" target="_blank">publications</a> à découvrir pour tout public, nous y reviendrons (CI/CD & DevOps, Lean & Flux, Produit & Agile, etc...)</li>
+						</ul>
+					</li>
+				</ul>
+			</p>
+		</article>
+		
+		<hr>
+		
+		<article>
+			<h2 id="les_cast_codeurs_et_welovedevs">#2 - 📻 Les Cast Codeurs et WeLoveDevs</h2>
+			<p>
+				<ul>
+					<li>Titre : <a href="https://lescastcodeurs.com/" target="_blank">Les Cast Codeurs</a>
+						<ul>
+							<li>Mots-clés : Java / interviews / actualité</li>
+							<li>Public : programmeur</li>
+							<li>Commentaires :
+								<ul>
+									<li>1er podcast Java français 🐓</li>
+									<li>animateurs proches de l'organisation de Devoxx FR</li>
+									<li>souvent assez techniques mais pas que, certains épisodes sont plus génériques et très intéressants :
+										<ul>
+											<li>ép. 262 sur la souveraineté numérique avec Q. Adam</li>
+											<li>ép. 261 sur Doctolib avec D. Gageot</li>
+											<li>ép. 243 et 245 sur le SRE avec N. Helleringer et M. Brugidou</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li>Titre : <a href="https://podcast.ausha.co/welovedevs-podcast" target="_blank">WeLoveDevs</a>
+						<ul>
+							<li>Mots-clés : jobs / entreprises IT / collaboration</li>
+							<li>Public : programmeur et manager</li>
+							<li>Commentaires :
+								<ul>
+									<li>à la fois un(e) podcast / entreprise (job-board) / blog / chaîne YT & Twitch</li>
+									<li>beaucoup de contenu sur la vie au travail dans le monde de l'IT</li>
+									<li>les épisodes qui m'ont marqué :
+										<ul>
+											<li>ép. 14 avec FG. Ribreau</li>
+											<li>ép. 9 avec N. Helleringer</li>
+											<li>ép. 11 avec B. Gantaume</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</p>
+		</article>
+		
+		<hr>
+		
+		<article>
+			<h2 id="cours_java">#1 - 📺 Cours Java</h2>
+			<p>
+				<ul>
+					<li>Titre : <a href="https://www.youtube.com/channel/UCIatmtIm9z5YEWuHbrUMLsw" target="_blank">cours en ligne</a> 100% Java sur la chaîne YouTube de José Paumard</li>
+					<li>Mots-clés : Java / design patterns / principes SOLID</li>
+					<li>Public : programmeur</li>
+					<li>Commentaires :
+						<ul>
+							<li>permet de réviser ou d'en apprendre plus sur la plateforme Java 💖 (introduction, POO, API Collection, API Stream, I/O, etc...)</li>
+							<li>vidéo de présentation du cours sur la page d'accueil de la chaîne</li>
+							<li>José Paumard est un Java Champion français et également auteur du blog <a href="http://blog.paumard.org/" target="_blank">Java le soir</a></li>
+							<li>ne pas manquer cette <a href="https://youtu.be/acpV4YaYmQY" target="_blank">courte vidéo</a> pour en savoir plus sur les livres que contient la bibliothèque d'un Java Champion 📚</li>
+						</ul>
+					</li>
+				</ul>
+			</p>
+		</article>
+		
+		<hr>
+		
+	</main>
+	
+	<footer>
+	
+		<p>
+			Blog | Sylvain MATHIEU<br>
+			<a href="https://registry.jsonresume.org/MatSyl">À propos</a> • <a href="https://twitter.com/MatSylv">@MatSylv</a></footer>
+		</p>
+		
   </body>
+  
 </html>
