--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 	<meta name="author" content="Sylvain MATHIEU">
-	<meta name="description" content="Blog de partage des vidéos, podcasts, livres et articles qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel (XP, TDD, software craft, legacy code legacy, continuous delivery).">
+	<meta name="description" content="Blog de partage des vidéos, podcasts, livres et articles qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel (XP, TDD, software craft, legacy code, continuous delivery).">
     <title>Blog | Sylvain MATHIEU</title>
 	<link rel="stylesheet" href="https://vanillacss.com/vanilla.css">
   </head>
