--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 			<p>J'ai inité ce blog pour partager du contenu avec mon équipe. Vous trouverez ici des vidéos 📺 / des podcasts 📻 / des livres 📕 / des articles 📰 qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel.</p>
 			<p>
 				<ul>
+					<li><a href="#dimitri_baeli">#11 - 📻 Dimitri Baeli</a></li>
 					<li><a href="#cd">#10 - 📺 Continuous Delivery</a></li>
 					<li><a href="#culture_org">#9 - 📰 Culture organisationnelle</a></li>
-					<li><a href="#state_of_devops">#8 - 📰 State of DevOps</a></li>
+					<li><a href="#state_of_devops">#8 - 📚 State of DevOps</a></li>
 					<li><a href="#xp">#7 - 🌟 Extreme Programming</a></li>
 					<li><a href="#software_craft">#6 - 📕 Software Craft</a></li>
 					<li><a href="#arnaud_lemaire">#5 - 📺 Arnaud Lemaire</a></li>
@@ -29,6 +30,25 @@
 					<li><a href="#culture_code">#3 - 📕 Culture Code</a></li>
 					<li><a href="#les_cast_codeurs_et_welovedevs">#2 - 📻 Les Cast Codeurs et WeLoveDevs</a></li>
 					<li><a href="#cours_java">#1 - 📺 Cours Java</a></li>
+				</ul>
+			</p>
+		</article>
+		
+		<hr>
+		
+		<article>
+			<h2 id="dimitri_baeli">#11 - 📻 Dimitri Baeli</h2>
+			<p>
+				<ul>
+					<li>Présentation : CTO et mentor d'équipe de développement, co-créateur de la <a href="https://flowcon.io/" target="_blank">FlowCon</a> et de <a href="https://www.tech.rocks/" target="_blank">Tech.Rocks</a></li>
+					<li>Mots-clés : livraison continue / flux / lean</li>
+					<li>Épisodes et podcast :
+						<ol>
+							<li><a href="https://ifttd.io/14-coder-peu-coder-mieux-dimitri-baeli/" target="_blank">Coder peu, coder mieux</a> par IFTTD</li>
+							<li><a href="https://podcast.ausha.co/artisan-developpeur/optimiser-la-vitesse-de-livraison-avec-dimitri-baeli" target="_blank">Optimiser la vitesse de livraison</a> par Artisan Développeur</li>
+							<li><a href="https://podcast.ausha.co/tech-rocks" target="_blank">Paroles de Tech Leaders</a> par Tech.Rocks</li>
+						</ol>
+					</li>
 				</ul>
 			</p>
 		</article>
@@ -85,7 +105,7 @@
 		<hr>
 		
 		<article>
-			<h2 id="state_of_devops">#8 - 📰 State of DevOps</h2>
+			<h2 id="state_of_devops">#8 - 📚 State of DevOps</h2>
 			<p>
 				<ul>
 					<li>Titre : <a href="https://www.devops-research.com/research.html" target="_blank">State of DevOps</a> (en) par le laboratoire DORA</li>
@@ -175,7 +195,7 @@
 			<h2 id="arnaud_lemaire">#5 - 📺 Arnaud Lemaire</h2>
 			<p>
 				<ul>
-					<li>Présentation : Arnaud Lemaire est un développeur et conférencier français, il parle de code, de legacy, d'agilité par l'extreme programming (XP) et de notre métier en général en synthétisant les idées développées par des grands noms du logiciel</li>
+					<li>Présentation : Arnaud Lemaire est un développeur, consultant et conférencier français, il parle de code, de legacy, d'agilité par l'extreme programming (XP) et de notre métier en général en synthétisant les idées développées par des grands noms du logiciel</li>
 					<li>Mots-clés : code / qualité / agilité</li>
 					<li>Blog : <a href="https://www.lilobase.me/" target="_blank">lilobase.me</a>
 					<li>Conférences :
@@ -221,7 +241,7 @@
 			<h2 id="dont_kill_french_tech">#4 - 📰 Don't Kill French Tech</h2>
 			<p>
 				<ul>
-					<li>Titre : <a href="https://www.dontkillfrenchtech.fr/" target="_blank">Dont' Kill French Tech</a> par un collectif de développeurs•ses</li>
+					<li>Titre : <a href="https://www.dontkillfrenchtech.fr/" target="_blank">Dont' Kill French Tech</a> par un collectif de 11 développeurs</li>
 					<li>Année : 2021</li>
 					<li>Mots-clés : cloud / politique / souveraineté numérique</li>
 					<li>Tout public 👐</li>
