Fix on the eleventh article

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<ul>
 					<li>Présentation : CTO et mentor d'équipe de développement, co-créateur de la <a href="https://flowcon.io/" target="_blank">FlowCon</a> et de <a href="https://www.tech.rocks/" target="_blank">Tech.Rocks</a></li>
 					<li>Mots-clés : livraison continue / flux / lean</li>
+					<li>Tout public 👐</li>
 					<li>Épisodes et podcast :
 						<ol>
 							<li><a href="https://ifttd.io/14-coder-peu-coder-mieux-dimitri-baeli/" target="_blank">Coder peu, coder mieux</a> par IFTTD</li>
