--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<p>
 				<ul>
 					<li>Présentation : CTO et mentor d'équipe de développement, co-créateur de la <a href="https://flowcon.io/" target="_blank">FlowCon</a> et de <a href="https://www.tech.rocks/" target="_blank">Tech.Rocks</a></li>
-					<li>Mots-clés : livraison continue / flux / lean</li>
+					<li>Mots-clés : organisation / méthode / flux</li>
 					<li>Tout public 👐</li>
 					<li>Épisodes et podcast :
 						<ol>
@@ -60,7 +60,7 @@
 			<h2 id="cd">#10 - 📺 Continuous Delivery</h2>
 			<p>
 				<ul>
-					<li>Titre : <a href="https://www.youtube.com/c/ContinuousDelivery" target="_blank">Continuous Delivery</a> par Dave Farley</li>
+					<li>Titre : <a href="https://www.youtube.com/c/ContinuousDelivery" target="_blank">Continuous Delivery</a> (en) par Dave Farley</li>
 					<li>Année : depuis 2020</li>
 					<li>Mots-clés : devops / tdd / bdd</li>
 					<li>Tout public 👐</li>
@@ -132,7 +132,7 @@
 							<li>quatre indicateurs clés de mesure de la performance : deux de rapidité et deux de fiabilité</li>
 							<li>plusieurs pratiques lean et techniques identifiées sont originellement issues de l'extreme programming ⬇️</li>
 							<li>chercher à créer des systèmes aisément testables et déployables : architectures faiblement couplées, tests et intégration continus, développements sur une <em>unique</em> branche (version 2021, p. 27), installations automatisées, etc...</li>
-							<li>devops == livraison continue == conserver un logiciel dans un état livrable à chaque instant (culture, pratiques et objectifs communs, nous y reviendrons), cette discipline peut permettre d'atteindre un rythme de travail où rapidité et fiabilité vont de pair 🔥</li>
+							<li>devops == livraison continue : l'<em>objectif</em> est de conserver un logiciel dans un état livrable <em>à chaque instant</em> (culture, pratiques et objectifs communs, nous y reviendrons), cette discipline doit permettre d'atteindre un rythme de travail où rapidité et fiabilité vont de pair 🔥</li>
 						</ul>
 					</li>
 				</ul>
@@ -160,7 +160,7 @@
 					<li>Commentaires :
 						<ul>
 							<li>méthode agile de développement logiciel née en 1996</li>
-							<li>similaire à Scrum pour l'organisation d'une équipe et d'un projet mais prescriptive sur les pratiques d'ingénierie</li>
+							<li>similaire à Scrum pour l'organisation d'une équipe et d'un projet mais <strong>prescriptive</strong> sur les pratiques d'ingénierie</li>
 							<li>est à l'origine de <mark>toutes les pratiques techniques</mark> (pas des outils !) des équipes les plus performantes : travail en binôme, test-driven development, simplicité, vocabulaire métier partagé, standards de codage, intégration continue, tests automatisés, petites livraisons fréquentes, rédaction et priorisation des stories, etc...</li>
 							<li>K. Beck est également le créateur de la 1ère version de JUnit</li>
 						</ul>
@@ -271,7 +271,7 @@
 						<ul>
 							<li>petit livre tech. écrit en français (178 pages)</li>
 							<li>Octo est une société de conseil reconnue, organisatrice de la Duck Conf</li>
-							<li>de nombreuses autres <a href="https://www.octo.com/publications/" target="_blank">publications</a> à découvrir pour tout public, nous y reviendrons (CI/CD & DevOps, Lean & Flux, Produit & Agile, etc...)</li>
+							<li>de nombreuses autres <a href="https://www.octo.com/publications/" target="_blank">publications</a> à découvrir pour tout public (CI/CD & DevOps, Lean & Flux, Produit & Agile, etc...)</li>
 						</ul>
 					</li>
 				</ul>
