--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<h2>Introduction</h2>
 			<p>J'ai inité ce blog pour partager du contenu avec mon équipe. Vous trouverez ici des vidéos 📺 / des podcasts 📻 / des livres 📕 / des articles 📰 qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel.</p>
 			<ul>
+				<li><a href="#tdd">#12 - 📕 Test-Driven Development</a></li>
 				<li><a href="#dimitri_baeli">#11 - 📻 Dimitri Baeli</a></li>
 				<li><a href="#cd">#10 - 📺 Continuous Delivery</a></li>
 				<li><a href="#culture_org">#9 - 📰 Culture organisationnelle</a></li>
@@ -30,6 +31,40 @@
 				<li><a href="#les_cast_codeurs_et_welovedevs">#2 - 📻 Les Cast Codeurs et WeLoveDevs</a></li>
 				<li><a href="#cours_java">#1 - 📺 Cours Java</a></li>
 			</ul>
+		</article>
+		
+		<!--#13 - Le code a changé-->
+		
+		<hr>
+		
+		<article>
+			<h2 id="tdd">#12 - 📕 Test-Driven Development</h2>
+			<ul>
+				<li>Titre : <a href="https://livre.fnac.com/a1397666/Beck-Test-driven-development" target="_blank">Test-Driven Development By Example</a> (en) de Kent Beck</li>
+				<li>Année : 2003</li>
+				<li>Mots-clés : red-green-refactor / conception / xUnit </li>
+				<li>Public : programmeur</li>
+				<li>Présentation :
+					<ul>
+						<li>travailler en cycles courts (baby steps)</li>
+						<li><s>est une stratégie de test</s> est une aide à la <strong>conception</strong></li>
+						<li>approche minimaliste, avec la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API</li>
+					</ul>
+				</li>
+				<li>Apprendre le TDD :
+					<ul>
+						<li>présentation du kata <a href="https://youtu.be/nbSaq_ykOl4" target="_blank">FizzBuzz</a> de M. Azerhad</li>
+						<li>article sur le cycle <a href="https://www.jamesshore.com/v2/blog/2005/red-green-refactor" target="_blank">red-greer-refactor</a> (en) de J. Shore</li>
+						<li><a href="https://youtu.be/yfP_v6qCdcs" target="_blank">tutoriel vidéo</a> (en) de D. Farley</li>
+						<li><a href="https://cleancoders.com/series/clean-code" target="_blank">tutoriels vidéos payants</a> (en) de R. Martin</li>
+						<li>catalogue <a href="https://kata-log.rocks/" target="_blank">kata-log</a> (en) pour s'entraîner par niveau, sujet ou contrainte</li>
+					</ul>
+				</li>
+			</ul>
+			<blockquote>
+				<p><i><b>Every time you encounter a testability problem, there's an underlying design problem.</b></i></p>
+				<p>Michael Feathers</p>
+			</blockquote>
 		</article>
 		
 		<hr>
@@ -90,7 +125,7 @@
 			</ul>
 			
 			<blockquote>
-				<p><i><b>La phrase la plus dangereuse qui soit est : "Nous avons toujours fait comme ça."</b></i></p>
+				<p><i><b>La phrase la plus dangereuse qui soit est : "Nous avons toujours fait comme ça".</b></i></p>
 				<p>Grace Hopper</p>
 			</blockquote>
 		</article>
