Fix on the twelfth article

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<li>Public : programmeur</li>
 				<li>Présentation :
 					<ul>
-						<li>travailler en cycles courts (baby steps)</li>
+						<li>travailler en cycles courts, concept issu de l'extreme programming</li>
 						<li><s>est une stratégie de test</s> est une aide à la <strong>conception</strong></li>
 						<li>approche minimaliste, avec la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API</li>
 					</ul>
