More details on the twelfth article

--- a/index.html
+++ b/index.html
@@ -48,16 +48,17 @@
 					<ul>
 						<li>travailler en cycles courts, concept issu de l'extreme programming</li>
 						<li><s>est une stratégie de test</s> est une aide à la <strong>conception</strong></li>
-						<li>approche minimaliste, avec la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API</li>
+						<li>approche minimaliste, avec la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API (red step)</li>
 					</ul>
 				</li>
-				<li>Apprendre le TDD :
+				<li>Aller plus loin :
 					<ul>
 						<li>présentation du kata <a href="https://youtu.be/nbSaq_ykOl4" target="_blank">FizzBuzz</a> de M. Azerhad</li>
-						<li>article sur le cycle <a href="https://www.jamesshore.com/v2/blog/2005/red-green-refactor" target="_blank">red-greer-refactor</a> (en) de J. Shore</li>
-						<li><a href="https://youtu.be/yfP_v6qCdcs" target="_blank">tutoriel vidéo</a> (en) de D. Farley</li>
+						<li>article sur le cycle <a href="https://www.jamesshore.com/v2/blog/2005/red-green-refactor" target="_blank">red-green-refactor</a> (en) de J. Shore</li>
+						<li><a href="https://youtu.be/yfP_v6qCdcs" target="_blank">tutoriel vidéo</a> (en) et autres présentations de D. Farley (YouTube)</li>
 						<li><a href="https://cleancoders.com/series/clean-code" target="_blank">tutoriels vidéos payants</a> (en) de R. Martin</li>
-						<li>catalogue <a href="https://kata-log.rocks/" target="_blank">kata-log</a> (en) pour s'entraîner par niveau, sujet ou contrainte</li>
+						<li>site web <a href="https://kata-log.rocks/" target="_blank">kata-log</a> (en) pour s'entraîner par niveau, sujet ou contrainte</li>
+						<li>épisode <a href="https://ifttd.io/43-tester-cest-douter-arnaud-lemaire/" target="_blank">Tester, c'est douter</a> par IFTTD avec A. Lemaire</li>
 					</ul>
 				</li>
 			</ul>
