--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 				<li>Public : programmeur</li>
 				<li>Présentation :
 					<ul>
-						<li>travailler en cycles courts, concept issu de l'extreme programming</li>
-						<li><s>est une stratégie de test</s> est une aide à la <strong>conception</strong></li>
-						<li>approche minimaliste, avec la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API (red step)</li>
+						<li>travailler en cycles courts, concept issu de l'extreme programming ⬇️</li>
+						<li>est <s>une stratégie de test</s> une méthode de <strong>conception</strong> du code</li>
+						<li>approche minimaliste, depuis la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API : capturer le <em>comportement</em> <u>attendu</u> sans être influencé par une implémentation potentielle</li>
 					</ul>
 				</li>
 				<li>Aller plus loin :
@@ -57,11 +57,12 @@
 						<li>article sur le cycle <a href="https://www.jamesshore.com/v2/blog/2005/red-green-refactor" target="_blank">red-green-refactor</a> (en) de J. Shore</li>
 						<li><a href="https://youtu.be/yfP_v6qCdcs" target="_blank">tutoriel vidéo</a> (en) et autres présentations de D. Farley (YouTube)</li>
 						<li><a href="https://cleancoders.com/series/clean-code" target="_blank">tutoriels vidéos payants</a> (en) de R. Martin</li>
-						<li>site web <a href="https://kata-log.rocks/" target="_blank">kata-log</a> (en) pour s'entraîner par niveau, sujet ou contrainte</li>
-						<li>épisode <a href="https://ifttd.io/43-tester-cest-douter-arnaud-lemaire/" target="_blank">Tester, c'est douter</a> par IFTTD avec A. Lemaire</li>
+						<li>site web <a href="https://kata-log.rocks/" target="_blank">kata-log</a> (en) pour s'entraîner</li>
+						<li>épisode <a href="https://ifttd.io/43-tester-cest-douter-arnaud-lemaire/" target="_blank">Tester c'est douter</a> par IFTTD avec A. Lemaire</li>
 					</ul>
 				</li>
 			</ul>
+			
 			<blockquote>
 				<p><i><b>Every time you encounter a testability problem, there's an underlying design problem.</b></i></p>
 				<p>Michael Feathers</p>
