--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<li>Public : programmeur</li>
 				<li>Présentation :
 					<ul>
-						<li>approche minimaliste, depuis la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API : capturer le <em>comportement</em> <u>attendu</u> sans être influencé par une implémentation potentielle</li>
+						<li>approche minimaliste, depuis la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API : capturer le <em>comportement</em> <u>attendu</u> sans se laisser influencer par une implémentation potentielle</li>
 						<li>travailler en cycles courts, concept issu de l'extreme programming ⬇️</li>
 						<li>est <s>une stratégie de test</s> une méthode de <strong>conception</strong> du code</li>
 					</ul>
