--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li>présentation du kata <a href="https://youtu.be/nbSaq_ykOl4" target="_blank">FizzBuzz</a> de M. Azerhad</li>
 						<li>article sur le cycle <a href="https://www.jamesshore.com/v2/blog/2005/red-green-refactor" target="_blank">red-green-refactor</a> (en) de J. Shore</li>
 						<li><a href="https://youtu.be/yfP_v6qCdcs" target="_blank">tutoriel vidéo</a> (en) et autres présentations de D. Farley (YouTube)</li>
-						<li><a href="https://cleancoders.com/series/clean-code" target="_blank">tutoriels vidéos payants</a> (en) de R. Martin</li>
+						<li><a href="https://cleancoders.com/series/clean-code" target="_blank">cours en ligne payants</a> (en) de R. Martin</li>
 						<li>site web <a href="https://kata-log.rocks/" target="_blank">kata-log</a> (en) pour s'entraîner</li>
 						<li>épisode <a href="https://ifttd.io/43-tester-cest-douter-arnaud-lemaire/" target="_blank">Tester c'est douter</a> par IFTTD avec A. Lemaire</li>
 					</ul>
