Fixes on #12 and #8

--- a/index.html
+++ b/index.html
@@ -42,23 +42,22 @@
 			<ul>
 				<li>Titre : <a href="https://livre.fnac.com/a1397666/Beck-Test-driven-development" target="_blank">Test-Driven Development By Example</a> (en) de Kent Beck</li>
 				<li>Année : 2003</li>
-				<li>Mots-clés : red-green-refactor / conception / xUnit </li>
+				<li>Mots-clés : itération / conception / xUnit </li>
 				<li>Public : programmeur</li>
 				<li>Présentation :
 					<ul>
 						<li>approche minimaliste, depuis la perspective du <em>consommateur</em> d'une classe, d'un module ou d'une API : capturer le <em>comportement</em> <u>attendu</u> sans se laisser influencer par une implémentation potentielle</li>
 						<li>travailler en cycles courts, concept issu de l'extreme programming ⬇️</li>
-						<li>est <s>une stratégie de test</s> une méthode de <strong>conception</strong> du code</li>
+						<li>est <s>une stratégie de test</s> une méthode pour <strong>guider</strong> la <u>conception</u> du code</li>
 					</ul>
 				</li>
 				<li>Aller plus loin :
 					<ul>
 						<li>présentation du kata <a href="https://youtu.be/nbSaq_ykOl4" target="_blank">FizzBuzz</a> de M. Azerhad</li>
-						<li>article sur le cycle <a href="https://www.jamesshore.com/v2/blog/2005/red-green-refactor" target="_blank">red-green-refactor</a> (en) de J. Shore</li>
-						<li><a href="https://youtu.be/yfP_v6qCdcs" target="_blank">tutoriel vidéo</a> (en) et autres présentations de D. Farley (YouTube)</li>
-						<li><a href="https://cleancoders.com/series/clean-code" target="_blank">cours en ligne</a> (en) de R. Martin alias Uncle Bob</li>
+						<li>long article <a href="https://www.jamesshore.com/v2/books/aoad1/test_driven_development" target="_blank">The Art of Agile Development : TDD</a> (en) de J. Shore</li>
+						<li><a href="https://youtu.be/yfP_v6qCdcs" target="_blank">tutoriel vidéo</a> (en) et autres présentations YouTube de D. Farley et les <a href="https://cleancoders.com/series/clean-code" target="_blank">cours en ligne</a> (en) de R. Martin alias Uncle Bob</li>
+						<li>épisode à écouter <a href="https://ifttd.io/43-tester-cest-douter-arnaud-lemaire/" target="_blank">Tester c'est douter</a> par IFTTD avec A. Lemaire</li>
 						<li>site web <a href="https://kata-log.rocks/" target="_blank">kata-log</a> (en) pour s'entraîner</li>
-						<li>épisode <a href="https://ifttd.io/43-tester-cest-douter-arnaud-lemaire/" target="_blank">Tester c'est douter</a> par IFTTD avec A. Lemaire</li>
 					</ul>
 				</li>
 			</ul>
@@ -160,7 +159,8 @@
 						<li>quatre indicateurs clés de mesure de la performance : deux de rapidité et deux de fiabilité</li>
 						<li>plusieurs pratiques lean et techniques identifiées sont originellement issues de l'extreme programming ⬇️</li>
 						<li>chercher à créer des systèmes aisément testables et déployables : architectures faiblement couplées, tests et intégration continus, développements sur une <em>unique</em> branche (version 2021, p. 27), installations automatisées, etc...</li>
-						<li>devops == livraison continue : l'<em>objectif</em> est de conserver un logiciel dans un état livrable <em>à chaque instant</em> (culture, pratiques et objectifs communs, nous y reviendrons), cette discipline doit permettre d'atteindre un rythme de travail où rapidité et fiabilité vont de pair 🔥</li>
+						<li>travailler dans un environnement où la sécurité psychologique est garantie pour échanger avec confiance et expérimenter de nouvelles idées sereinement</li>
+						<li>devops == livraison continue : l'<em>objectif</em> est de conserver un logiciel dans un état livrable <em>à chaque instant</em>, cette discipline doit permettre d'atteindre un rythme de travail où rapidité et fiabilité vont de pair 🔥</li>
 					</ul>
 				</li>
 			</ul>
