--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-	<meta name="author" content="Sylvain MATHIEU">
-	<meta name="description" content="Blog de partage des vidéos, podcasts, livres et articles qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel (XP, TDD, software craft, legacy code, continuous delivery).">
+	<meta name="viewport" content="width=device-width">
     <title>Blog | Sylvain MATHIEU</title>
+	
+	<meta name="author" content="Sylvain MATHIEU">
+	<meta name="description" content="Blog de partage sur l'ingénierie logicielle">
+	
+	<meta property="og:image" content="">
+	<meta property="og:description" content="Blog de partage sur l'ingénierie logicielle">
+	<meta property="og:title" content="Blog | Sylvain MATHIEU">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Blog | Sylvain MATHIEU">
+	<meta property="og:url" content="https://matsyl.github.io/">
+	<meta property="og:locale" content="fr_FR">
+	
 	<link rel="stylesheet" href="https://vanillacss.com/vanilla.css">
   </head>
   
