--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:url" content="https://matsyl.github.io/">
 	<meta property="og:locale" content="fr_FR">
 	
-	<link rel="stylesheet" href="https://vanillacss.com/vanilla.css">
+	<!--<link rel="stylesheet" href="https://vanillacss.com/vanilla.css">-->
   </head>
   
   <body>
@@ -45,7 +45,7 @@
 			</ul>
 		</article>
 		
-		<!--#14 - Le code a changé-->
+		<!--#14 - Radio France : Le code a changé avec G. Musquet, sur la cybersécu et Gérard Berry / Série Culture sur les géants de la tech -->
 		
 		<hr>
 		
@@ -58,9 +58,9 @@
 				<li>Tout public 👐</li>
 				<li>Commentaires :
 					<ul>
-						<li>pourquoi s'intéresser aux principes et aux pratiques de la livraison continue pour accroître la qualité et la vélocité des développements ?</li>
+						<li>pourquoi s'intéresser aux principes et aux pratiques de la livraison continue pour accroître la qualité et la vélocité des développements <em>mais aussi</em> pour améliorer les <strong>résultats commerciaux</strong> et la <strong>satisfaction des clients</strong></li>
 						<li>avec D. Farley, J. Humble est le co-auteur du livre <i>Continuous Delivery</i> publié en 2010 et Jolt Award</li>
-						<li>J. Humble est également contributeur des premiers <i>State of DevOps Reports</i> ⬇️ et d'<i>Accelerate</i>, publié en 2018 et Shingo Publication Award</li>
+						<li>J. Humble est également contributeur des premiers <i>State of DevOps Reports</i> et d'<i>Accelerate</i>, publié en 2018 et Shingo Publication Award ⬇️</li>
 					</ul>
 				</li>
 			</ul>
@@ -249,7 +249,7 @@
 		<article>
 			<h2 id="arnaud_lemaire">#5 - 📺 Arnaud Lemaire</h2>
 			<ul>
-				<li>Présentation : Arnaud Lemaire est un développeur, consultant et conférencier français, il parle de code, de legacy, d'agilité par l'extreme programming (XP) et de notre métier en général en synthétisant les idées développées par des grands noms du logiciel</li>
+				<li>Présentation : Arnaud Lemaire est un développeur, consultant et conférencier français, il parle de code, de legacy, d'agilité par l'extreme programming (XP) et de notre métier plus largement en synthétisant les idées développées par des grands noms du logiciel</li>
 				<li>Mots-clés : code / qualité / agilité</li>
 				<li>Blog : <a href="https://www.lilobase.me/" target="_blank">lilobase.me</a>
 				<li>Conférences :
