--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<ul>
 						<li>pourquoi s'intéresser aux principes et aux pratiques de la livraison continue pour accroître la qualité et la vélocité des développements <em>mais aussi</em> pour améliorer les <strong>résultats commerciaux</strong> et la <strong>satisfaction des clients</strong></li>
 						<li>avec D. Farley, J. Humble est le co-auteur du livre <i>Continuous Delivery</i> publié en 2010 et Jolt Award</li>
-						<li>J. Humble est également contributeur des premiers <i>State of DevOps Reports</i> et d'<i>Accelerate</i>, publié en 2018 et Shingo Publication Award ⬇️</li>
+						<li>J. Humble est également contributeur du <i>DevOps Handbook</i>, des premiers <i>State of DevOps Reports</i> et d'<i>Accelerate</i>, publié en 2018 et Shingo Publication Award ⬇️</li>
 					</ul>
 				</li>
 			</ul>
@@ -191,7 +191,7 @@
 						<li>plusieurs pratiques lean et techniques identifiées sont originellement issues de l'extreme programming ⬇️</li>
 						<li>chercher à créer des systèmes aisément testables et déployables : architectures faiblement couplées, tests et intégration continus, développements sur une <em>unique</em> branche (version 2021, p. 27), installations automatisées, etc...</li>
 						<li>travailler dans un environnement où la sécurité psychologique est garantie pour échanger avec confiance et expérimenter de nouvelles idées sereinement</li>
-						<li>devops == livraison continue : l'<em>objectif</em> est de conserver un logiciel dans un état livrable <em>à chaque instant</em>, cette discipline doit permettre d'atteindre un rythme de travail où rapidité et fiabilité vont de pair 🔥</li>
+						<li>travail en flux, feedback et apprentissage continu : the 3 ways 🔥</li>
 					</ul>
 				</li>
 			</ul>
