Atelier TU on #14

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<h2>Introduction</h2>
 			<p>J'ai inité ce blog pour partager du contenu avec mon équipe. Vous trouverez ici des vidéos 📺 / des podcasts 📻 / des livres 📕 / des articles 📰 qui me plaisent, m'interpellent et retiennent mon attention dans le monde du développement logiciel.</p>
 			<ul>
+				<li><a href="#atelier_tu">#14 - 🧑‍🎓 [Formation] Tests unitaires</a></li>
 				<li><a href="#adopting_cd">#13 - 📺 Adopting Continuous Delivery</a></li>
 				<li><a href="#tdd">#12 - 📕 Test-Driven Development</a></li>
 				<li><a href="#dimitri_baeli">#11 - 📻 Dimitri Baeli</a></li>
@@ -45,7 +46,21 @@
 			</ul>
 		</article>
 		
-		<!--#14 - Radio France : Le code a changé avec G. Musquet, sur la cybersécu et Gérard Berry / Série Culture sur les géants de la tech -->
+		<hr>
+
+		<article>
+			<h2 id="atelier_tu">#14 - 🧑‍🎓 [Formation] Tests unitaires</h2>
+			<ul>
+				<li>Titre : <a href="atelier-tu/index.html" target="_blank">Ateliers sur les tests unitaires</a>, animé chez <a href="https://fr.linkedin.com/company/equasens" target="_blank">Equasens</a></li>
+				<li>Années : 2023 et 2024</li>
+				<li>Mots-clés : rédiger des tests / concevoir son code / xanax</li>
+				<li><a href="sources-atelier-tu.html" target="_blank">Sources</a></li>
+			</ul>
+		</article>
+
+		<!-- #16 Culture Test -->
+		<!-- #15 Testing Blog by Google : une pépite ! Voir l'article (entre autre) de M. Hevery : https://testing.googleblog.com/2008/08/by-miko-hevery-so-you-decided-to.html et la série Testing On The Toilet -->
+		<!-- #14 Radio France : Le code a changé avec G. Musquet, sur la cybersécu et Gérard Berry / Série Culture sur les géants de la tech / Zoom sur les codeurs -->
 		
 		<hr>
 		
@@ -281,6 +296,12 @@
 										<li>fait référence au Chaos Report qui présente l'état de l'art du développement logiciel (publié annuellement depuis 1994)</li>
 									</ul>
 								</li>
+							</ul>
+						</li>
+						<li><a href="https://youtu.be/Tafp0TnuOvc?si=C7wmprGB3ululvs4" target="_blank">Let's reset Agile (at scale)</a> (fr)
+							<ul>
+								<li>Tout public 👐</li>
+								<li>Un exemple de simplicité pour les grandes entreprises</li>
 							</ul>
 						</li>
 					</ol>
