Amélioration des sources sur #14

--- a/sources-atelier-tu.html
+++ b/sources-atelier-tu.html
@@ -32,17 +32,17 @@
 								<li>Culture Code, Octo</li>
 								<li>Culture Test, Octo-CNES</li>
 								<li>Code Proprement, R. Martin</li>
-								<li>Software Craft, collectif</li>
+								<li><a href="https://matsyl.github.io/#software_craft">Software Craft</a>, collectif</li>
 							</ul>
 						</li>
 						<li><h4>Article</h4>
 							<ul>
-								<li>La pyramide des tests par la pratique, Octo</li>
+								<li><a href="https://blog.octo.com/la-pyramide-des-tests-par-la-pratique-1-5" target="_blank">La pyramide des tests par la pratique</a>, Octo</li>
 							</ul>
 						</li>
 						<li><h4>Podcast</h4>
 							<ul>
-								<li>Tester c'est douter, IFTTD</li>
+								<li><a href="https://www.ifttd.io/episodes/43-tester-cest-douter-arnaud-lemaire" target="_blank">Tester c'est douter</a>, IFTTD</li>
 							</ul>
 						</li>
 					</ul>
@@ -51,25 +51,21 @@
 					<ul>
 						<li><h4>Books</h4>
 							<ul>
-								<li>Test-Driven Development, K. Beck</li>
+								<li><a href="https://matsyl.github.io/#tdd">Test-Driven Development</a>, K. Beck</li>
 								<li>Working Effectively With Legacy Code, M. Feathers</li>
 								<li>Refactoring, M. Fowler</li>
 							</ul>
 						</li>
-						<li><h4>Guide</h4>
-							<ul>
-								<li>TDD Top Tips, D. Farley</li>
-							</ul>
-						</li>
 						<li><h4>Blog</h4>
 							<ul>
-								<li>Testing Blog, Google</li>
+								<li><a href="https://testing.googleblog.com/" target="_blank">Testing Blog</a>, Google</li>
 							</ul>
 						</li>
 						<li><h4>Talks</h4>
 							<ul>
-								<li>The Art Of Unit Testing, R. Osherove & D. Farley</li>
-								<li>TDD, Where Did It All Go Wrong, I. Cooper</li>
+								<li><a href="https://youtu.be/6ndAWzc2F-I?si=egrLvBs8ufZV8FWR" target="_blank">The Art Of Unit Testing</a>, R. Osherove & D. Farley</li>
+								<li><a href="https://youtu.be/UvMpJSiI3WU?si=3OICSGiWszmMtaRT" target="_blank">Total TDD | VOL. 1: What Is It, What To Do When It Goes Wrong & Why Hasn't It Taken Over The World ?</a>, D. Farley</li>
+								<li><a href="https://youtu.be/EZ05e7EMOLM?si=4iy4fNG9OQFoBKJg" target="_blank">TDD, Where Did It All Go Wrong</a>, I. Cooper</li>
 							</ul>
 						</li>
 					</ul>
