Atelier TU : màj du modèle du DORA en v2.0.0

--- a/atelier-tu/index.html
+++ b/atelier-tu/index.html
@@ -42,7 +42,7 @@
 						</ul>
 					</section>
 					<section>
-						<img data-src="dora-core-model-v1.2.2.png">
+						<img data-src="dora-core-v2.0.0-detail.png">
 					</section>
 					<section>
 					<blockquote>&ldquo;Nous ne voulons pas avoir des tests juste pour avoir des tests. Nous voulons des tests pour soutenir notre travail.&ldquo;</blockquote>
