Atelier TU : un mot sur les données de test

--- a/atelier-tu/index.html
+++ b/atelier-tu/index.html
@@ -64,7 +64,7 @@
 					<p>---</p>
 					<p>3 étages du test unitaire : Given / When / Then ou Arrange / Act / <u>Assert</u></p>
 					<p>---</p>
-					<p>Les tests ne doivent jamais s'affecter mutuellement</p>
+					<p>Les tests ne doivent jamais s'affecter mutuellement (jeu de données et états partagés)</p>
 				</section>
 				<!--<section>
 					<ul>
