màj intervalle des années de la formation TU

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<h2 id="atelier_tu">#14 - 🧑‍🎓 [Formation] Tests unitaires</h2>
 			<ul>
 				<li>Titre : <a href="atelier-tu/index.html" target="_blank">Ateliers sur les tests unitaires</a>, animé chez <a href="https://fr.linkedin.com/company/equasens" target="_blank">Equasens</a></li>
-				<li>Années : 2023 et 2024</li>
+				<li>Années : 2023-2025</li>
 				<li>Mots-clés : rédiger des tests / concevoir son code / xanax</li>
 				<li><a href="sources-atelier-tu.html" target="_blank">Sources</a></li>
 			</ul>
