--- a/atelier-tu/index.html
+++ b/atelier-tu/index.html
@@ -170,6 +170,7 @@
 					<h3>Autres outils</h3>
 					<ul>
 						<li>Jest, Javalanche</li>
+						<li>MockServer, GreenMail</li>
 						<li>TestNG, QuickPerf</li>
 						<li>Jasmine</li>
 						<li>Outils intégrés</li>
